# hotel-booking-api

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: enums.rs  main.rs  resources.rs  settings.rs
src/models/: app_state.rs  health.rs  mod.rs
src/routes/: health.rs  mod.rs
